--- a/src/css/main-style.css
+++ b/src/css/main-style.css
@@ -1,8 +1,23 @@
 
+html{
+    font-family: sans-serif;
+    color: black;
+}
+
+a{
+    color: black;
+}
+
+.navegacao{
+    color: black;
+}
+
+
+
 .container{
     display: grid;
     grid-template-columns: auto;
-    grid-template-rows: 200px 50px 600px 100px;
+    grid-template-rows: 200px 50px 800px 100px;
     grid-template-areas:
     "banner"
     "nav"
@@ -11,8 +26,8 @@
     }
 
     .box{
-        background: #dfd7d5;
-        border: 1px solid red;
+        background: #dbe0e7;
+        border: 3px solid black;
     }
 
     .banner{
@@ -46,7 +61,7 @@
         display: flex;
         flex-direction: row;
         justify-content: space-around;
-        align-content: center;
+        align-items: center;
         margin-top: 15px;
     }
 
@@ -55,14 +70,14 @@
        flex-direction: row;
        justify-content: space-around;
        align-content: center;
-       margin-top: 15px;
+       margin-top: 50px;
     }
 
     .imagem_avatar{
         border-radius: 55px;
         width: 100px;
         height: 100px;
-        margin-top: 20px;
+        margin-top: 100px;
     }
 
     ul {
