--- a/src/css/projectGrid.css
+++ b/src/css/projectGrid.css
@@ -1,14 +1,14 @@
 
-@import "main-style.css";
+@import "mainGrid.css";
+@import "header.css";
+@import "nav.css";
+@import "main.css";
+@import "footer.css";
 
-
-.projetos{
-    text-align:center;
-}
 
 .grid_projects{
     display: grid;
-    margin-top: 50px;
+    margin-top: 20px;
     margin-left: 50px;
     margin-right: 50px;
     grid-gap: 15px;
@@ -25,7 +25,7 @@
 }
 
 #segundo_projeto{
-    grid-area: projeto3;
+    grid-area: projeto2;
 }
 
 #terceiro_projeto{
@@ -36,11 +36,16 @@
     grid-area: projeto4;
 }
 
-.imagem_projeto{
-    width: 30%;
+@media (max-width: 1000px){
+    .grid_projects{
+    grid-template-columns: auto;
+    grid-template-areas:
+    "projeto1"
+    "projeto2"
+    "projeto3"
+    "projeto4";
+    }
 }
 
-#imagem_gomas{
-    width: 200px;
-    height: 150px;
-}
+
+
